compiler/typ/tests/fixtures/diagnostics/0980_mli_nested_path_zeroary_overapplied_05.mli.infer.expected
File "0980_mli_nested_path_zeroary_overapplied_05.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0980_mli_nested_path_zeroary_overapplied_05 is not a valid module name.

File "0980_mli_nested_path_zeroary_overapplied_05.mli", line 7, characters 16-41:
7 | val x_epsilon : int Outer_epsilon.Inner.t
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_epsilon.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
