compiler/typ/tests/fixtures/diagnostics/0980_mli_nested_path_zeroary_overapplied_05.mli
module Outer_epsilon : sig
  module Inner : sig
    type t
  end
end

val x_epsilon : int Outer_epsilon.Inner.t
